# setroubleshoot

./: .gitignore  .gitlab-ci.yml  README  zanata.xml
.tx/: config
framework/: ChangeLog  DBUS.md  HACKING  Makefile.am  NEWS  configure  configure.ac  org.fedoraproject.SetroubleshootFixit.conf  org.fedoraproject.SetroubleshootPrivileged.conf  org.fedoraproject.SetroubleshootPrivileged.service  org.fedoraproject.Setroubleshootd.conf  org.fedoraproject.Setroubleshootd.service  setroubleshoot.appdata.xml  setroubleshoot.desktop  setroubleshoot.desktop.in
framework/doc/: Makefile.am  developers_guide.wiki  sealert.8  seapplet.1  setroubleshootd.8  user_faq.wiki
framework/gui/: Makefile.am  Makefile.in  browser.glade  browser.glade.old  browser.ui  bug_report.ui  style.css
framework/po/: Makefile.in.in  POTFILES.in  af.po  af_ZA.po  aln.po  am.po  ar.po  as.po  ast.po  az.po  az_IR.po  bal.po  be.po  be@latin.po  bg.po  bn.po  bn_BD.po  bn_IN.po  bo.po  br.po  brx.po  bs.po  ca.po  ca@valencia.po  cs.po  cs_CZ.po  cy.po  da.po  de.po  de_CH.po  dz.po  el.po  en@shaw.po  en_GB.po  en_US.po  eo.po  es.po  es_ES.po  es_MX.po  et.po  (+95 more)
framework/src/: Makefile.am  Makefile.in  Plugin.py  SetroubleshootFixit.py  SetroubleshootPrivileged.py  access_control.py  analyze.py  audit_data.py  avc_audit.py  browser.py  config.py.in  default_encoding.c  email_alert.py  errcode.py  gui_utils.py  html_util.py  rpc.py  run_cmd.py  sealert  seapplet  seapplet.c  seapplet.py  sedbus.c  sedispatch.c  server.py  serverconnection.py  setroubleshoot.cfg  setroubleshoot.conf  setroubleshoot_upgrade  setroubleshootd  setup.py  signature.py  updater.py  util.py  xml_data_v01.py  xml_serialize.py
framework/src/default_encoding/: setup.py
framework/src/sesearch/: sesearch.c
framework/src/setroubleshoot/: Plugin.py  access_control.py  analyze.py  audit_data.py  avc_audit.py  browser.py  email_alert.py  errcode.py  gui_utils.py  html_util.py  rpc.py  rpc_interfaces.py  server.py  serverconnection.py  signature.py  util.py  uuid.py  xml_serialize.py
framework/test/: audisp_listen  client_rpc.py  test_setroubleshootd  testlogs
plugins/: ChangeLog  Makefile.am  Makefile.in  NEWS  booleans.py  booleans_trans.py  configure  configure.ac
plugins/po/: Makefile.in.in  POTFILES.in  af.po  af_ZA.po  aln.po  am.po  ang.po  ar.po  as.po  ast.po  az.po  bal.po  be.po  bg.po  bn.po  bn_BD.po  bn_IN.po  bo.po  br.po  brx.po  bs.po  ca.po  cs.po  cs_CZ.po  cy.po  da.po  de.po  de_CH.po  dz.po  el.po  en.po  en_GB.po  en_US.po  eo.po  es.po  es_ES.po  es_MX.po  et.po  eu.po  eu_ES.po  (+96 more)
plugins/src/: Makefile.am  Makefile.in  allow_anon_write.py  allow_execheap.py  allow_execmem.py  allow_execmod.py  allow_execstack.py  allow_ftpd_use_cifs.py  allow_ftpd_use_nfs.py  associate.py  automount_exec_config.py  bind_ports.py  catchall.py  catchall_boolean.py  catchall_labels.py  chrome.py  connect_ports.py  cvs_data.py  dac_override.py  device.py  disable_ipv6.py  file.py  filesystem_associate.py  findexecstack  httpd_can_sendmail.py  httpd_unified.py  httpd_write_content.py  kernel_modules.py  leaks.py  mmap_zero.py  mounton.py  mozplugger.py  mozplugger_remove.py  openvpn.py  public_content.py  qemu_blk_image.py  qemu_file_image.py  restorecon.py  restorecon_source.py  rsync_data.py  (+11 more)
plugins/tools/: plugins.py
